--- a/config_example.yaml
+++ b/config_example.yaml
@@ -1,6 +1,9 @@
-info:
+database:
   host: "localhost"
   port: 3306
   user: "root"
   password: "123456"  # Replace with your password
-  database: "bms"
+
+server:
+  host: "localhost"
+  port: 8080
